2005-01-17  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide Stock.
	* gtk/Makefile.am : add new file.
	* gtk/StockManager.cs : stock item management methods.

2005-01-14  Dan Winship  <danw@novell.com>

	* glib/Object.cs (ConnectDefaultHandlers): Don't call a signal's
	ConnectionMethod if it's already been called for a superclass of
	the current class. #71278

2005-01-13  Zac Bowling  <zac@zacbowling.com>

	* makefile.win32 : new "gac" target for automatic for gacutil calls,
	added copying of gtk-sharp.snk to each folder being built to fix fresh
	builds and after cleaning, added support for switching C#
	compilers, and added handling of spaces in filenames for mcs builds
	* gtkdotnet/makefile.win32 : add one more reference to fix mcs builds.
	
2005-01-13  Mike Kestner  <mkestner@novell.com>

	* configure.in : make vte check conditional on gnome.
	* gtkdotnet/Makefile.am : add some references.

2005-01-13  Dan Winship  <danw@novell.com>

	* generator/ObjectGen.cs: Make ContainerChild constructors
	"protected internal" rather than just "internal", so the classes
	can be subclassed nicely.

2005-01-13  Zac Bowling  <zac@zacbowling.com>

	* gtkdotnet/makefile.win32 : fixed references to build on Win32
	
2005-01-12  Mike Kestner  <mkestner@novell.com>

	* sample/gnomevfs/Makefile,am : conditionally build.

2005-01-12  Mike Kestner  <mkestner@novell.com>

	* sample/gnomevfs/*.cs : s/Test.Gnome.VFS/TestGnomeVfs to avoid
	namespace collision problems with current mcs.

2005-01-11  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: There might be multiple S.D assemblies (eg, if you
	build the 2.0 crap, you get a 1.1 and a 2.0). So use head -n1 when
	looking at gacutil

2005-01-11  Mike Kestner  <mkestner@novell.com>

	* configure.in : add test for System.Drawing. expand gtkdotnet.
	* Makefile.am : add gtkdotnet.
	* makefile.win32 : add gtkdotnet.
	* gtkdotnet/* : new .Net extensions assembly. Moved the sample