@@ -584,7 +584,7 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
         <Parameter Name="height" Type="System.Int32" />
       </Parameters>
       <Docs>
-        <summary> Draws a resize grip in the given rectangle on <paramref name="window"/> using the given parameters. </summary>
+        <summary> Draws a resize grip in the given rectangle on <paramref name="window" /> using the given parameters. </summary>
         <param name="style">a <see cref="T:Gtk.Style" /></param>
         <param name="window">a <see cref="T:Gdk.Window" /></param>
         <param name="state_type">a <see cref="T:Gtk.StateType" /></param>
@@ -652,7 +652,7 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
         <Parameter Name="height" Type="System.Int32" />
       </Parameters>
       <Docs>
-        <summary>Draws a radio button indicator in the given rectangle on <paramref name="window"/> with the given parameters.
+        <summary>Draws a radio button indicator in the given rectangle on <paramref name="window" /> with the given parameters.
 	</summary>
         <param name="style">a <see cref="T:Gtk.Style" /></param>
         <param name="window">a <see cref="T:Gdk.Window" /></param>
@@ -826,7 +826,7 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
         <Parameter Name="height" Type="System.Int32" />
       </Parameters>
       <Docs>
-        <summary>Draws an option menu tab (i.e. the up and down pointing arrows) in the given rectangle on <paramref name="window"/> using the given parameters.
+        <summary>Draws an option menu tab (i.e. the up and down pointing arrows) in the given rectangle on <paramref name="window" /> using the given parameters.
 	</summary>
         <param name="style">a <see cref="T:Gtk.Style" /></param>
         <param name="window">a <see cref="T:Gdk.Window" /></param>
@@ -1428,9 +1428,9 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
         <summary>Deprecated.</summary>
         <returns>a <see cref="T:Gdk.Font" /></returns>
         <remarks>
-	  The <see cref="T:Gdk.Font"/> to use for a given style. This
+	  The <see cref="T:Gdk.Font" /> to use for a given style. This
 	  is deprecated and should not be used in new code.  New code
-	  should use <see cref="P:Gtk.Style.FontDescription"/>
+	  should use <see cref="P:Gtk.Style.FontDescription" />
 	  instead.
 	</remarks>
       </Docs>
@@ -1449,8 +1449,8 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
 	</summary>
         <remarks>
 	  A connection to this signal can be useful if a widget wants
-	  to cache objects like a <see cref="T:Gdk.GC"/> as object
-	  data on <see cref="T:Gtk.Style"/>.  This signal provides a
+	  to cache objects like a <see cref="T:Gdk.GC" /> as object
+	  data on <see cref="T:Gtk.Style" />.  This signal provides a
 	  convenient place to free such cached objects.
 	</remarks>
       </Docs>
@@ -1508,7 +1508,8 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
       <Docs>
         <summary>Deprecated. Do not use.</summary>
         <returns>a <see cref="T:Gtk.Style" /></returns>
-        <remarks></remarks>
+        <remarks>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Unref">
@@ -1520,7 +1521,95 @@ color or pixmap specified by this style for <paramref name="state" />.</summary>
       <Parameters />
       <Docs>
         <summary>Deprecated. Do not use.</summary>
-        <remarks></remarks>
+        <remarks>
+        </remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="LightColors">
+      <MemberSignature Language="C#" Value="public Gdk.Color [] LightColors { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Color[]</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Light colors indexed by state.</summary>
+        <returns>a <see cref="T:Gdk.Color[]" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="MidColors">
+      <MemberSignature Language="C#" Value="public Gdk.Color [] MidColors { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Color[]</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Mid colors indexed by state.</summary>
+        <returns>a <see cref="T:Gdk.Color[]" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="DarkColors">
+      <MemberSignature Language="C#" Value="public Gdk.Color [] DarkColors { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Color[]</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Dark colors indexed by state.</summary>
+        <returns>a <see cref="T:Gdk.Color[]" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="Light">
+      <MemberSignature Language="C#" Value="public Gdk.Color Light (Gtk.StateType state);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Color</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="state" Type="Gtk.StateType" />
+      </Parameters>
+      <Docs>
+        <summary>Gets the light color for a given state.</summary>
+        <param name="state">a <see cref="T:System.Int32" /></param>
+        <returns>a <see cref="T:Gdk.Color" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="Mid">
+      <MemberSignature Language="C#" Value="public Gdk.Color Mid (Gtk.StateType state);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Color</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="state" Type="Gtk.StateType" />
+      </Parameters>
+      <Docs>
+        <summary>Gets the mid color for a given state.</summary>
+        <param name="state">a <see cref="T:System.Int32" /></param>
+        <returns>a <see cref="T:Gdk.Color" /></returns>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="Dark">
+      <MemberSignature Language="C#" Value="public Gdk.Color Dark (Gtk.StateType state);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Color</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="state" Type="Gtk.StateType" />
+      </Parameters>
+      <Docs>
+        <summary>Gets the dark color for a given state.</summary>
+        <param name="state">a <see cref="T:System.Int32" /></param>
+        <returns>a <see cref="T:Gdk.Color" /></returns>
+        <remarks />
       </Docs>
     </Member>
   </Members>
