@@ -1,5 +1,11 @@
 2005-01-17  Mike Kestner  <mkestner@novell.com>
 
+	* gtk/Style.custom : add Light, LightColors, Mid, MidColors, Dark,
+	and DarkColors.
+	* gtk/glue/style.c : add get_light and get_dark
+
+2005-01-17  Mike Kestner  <mkestner@novell.com>
+
 	* gtk/Gtk.metadata : hide Stock.
 	* gtk/Makefile.am : add new file.
 	* gtk/StockManager.cs : stock item management methods.
